stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_visualize__visualize_basic_workflow_dot.snap
---
source: crates/stepflow-cli/tests/commands/test_visualize.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - visualize
    - tests/mock/basic.yaml
    - "--output=/var/folders/zk/lxqpq1490bb5xkvpdg25058r0000gn/T/stepflow_test_basic_output.dot"
    - "--format=dot"
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
✅ Visualization generated: [TEMP_DIR]/stepflow_test_basic_output.dot
