stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_visualize__visualize_conditional_skip_workflow.snap
---
source: crates/stepflow-cli/tests/commands/test_visualize.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - visualize
    - tests/mock/conditional_skip.yaml
    - "--output=/var/folders/n_/z06qv4693_d0ns_h8v3kxk8h0000gn/T/stepflow_test_conditional_skip.dot"
    - "--format=dot"
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Missing file: [PROJECT]/tests/mock/conditional_skip.yaml
