stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_visualize__visualize_stdout_with_options.snap
---
source: crates/stepflow-cli/tests/commands/test_visualize.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - visualize
    - tests/mock/basic.yaml
    - "--format=dot"
    - "--no-servers"
    - "--no-details"
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----
digraph workflow {
  rankdir=TB;
  node [shape=box, style=filled];
  edge [fontsize=10];

  "workflow_input" [
    label="📥 Workflow Input",
    fillcolor="lightblue",
    shape=ellipse,
  ];

  "step1" [
    label="🔧 step1",
    fillcolor="lightcoral",
  ];
  "step2" [
    label="🔧 step2",
    fillcolor="lightcoral",
  ];
  "workflow_output" [
    label="📤 Workflow Output",
    fillcolor="lightgreen",
    shape=ellipse,
  ];

  "workflow_input" -> "step1" [
    label="input",
  ];
  "step1" -> "step2" [
    label="input",
  ];
  "step1" -> "workflow_output" [
    label="name",
  ];
  "step2" -> "workflow_output" [
    label="x",
  ];
  "step2" -> "workflow_output" [
    label="y",
  ];
}


----- stderr -----
